# html2md

./: .coverage  .gitignore  .~lock.rosa-mr.docx#  AGENTS.md  CLAUDE.md  README.md  debug_heading_matching.py  formatting_rules.md  pyproject.toml  search_text_in_docx.py  simple_heading_test.py  split-implement.md  test_heading_conversion.py  test_numbering.py  test_numbering2.py  test_numbering3.py  test_numbering4.py  test_numbering5.py  todo
input/: rosamr.docx.html
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
output_dir/: 4.installation.md  toc.json
src/doc2md/: cli.py  config.py  heading_numbering.py  llm_client.py  mammoth_style_map.map  navigation.py  postprocess.py  preprocess.py  prompt_builder.py  restore_numbers.lua  schema.py  splitter.py  validators.py
tests/: test_cli.py  test_heading_numbering.py  test_llm_client.py  test_navigation.py  test_postprocess.py  test_preprocess.py  test_prompt_builder.py  test_schema.py  test_splitter.py  test_validators.py
